<?xml version="1.0" encoding="utf-8"?>


<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">




    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginBottom="424dp"
        android:layout_marginEnd="114dp"
        android:layout_marginStart="115dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText"
        android:text="@string/Submit"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="130dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button"
        android:text=""
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="314dp" />
    </LinearLayout>

